--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Cipher</title>
   </head>
   <body>
-    <h1>Cipher</h1>
+    <h1>Original sentence</h1>
+    <p>Encoded Sentence</p>
+    <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
